--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pimalaya-toolboox"
+name = "pimalaya-toolbox"
 description = "Pimalaya toolbox for building applications"
 version = "0.0.1"
 authors = ["soywod <clement.douin@posteo.net>"]
@@ -18,9 +18,21 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = []
-
-[dev-dependencies]
+build = ["dep:git2", "dep:serde", "dep:toml"]
+terminal = ["dep:anyhow", "dep:clap", "dep:dirs", "dep:env_logger", "dep:serde", "dep:serde-toml-merge", "dep:serde_json", "dep:shellexpand", "dep:toml", "dep:toml_edit"]
 
 [dependencies]
+anyhow = { version = "1", optional = true }
+clap = { version = "4.4", default-features = false, features = ["std", "derive"], optional = true }
+dirs = { version = "6.0", optional = true }
+env_logger = { version = "0.11", optional = true }
+git2 = { version = "0.19", optional = true, default-features = false }
+log = "0.4"
+serde = { version = "1", features = ["derive"], optional = true }
+serde-toml-merge = { version = "0.3", optional = true }
+serde_json = { version = "1", optional = true }
+shellexpand = { version = "3.1", optional = true }
+toml = { version = "0.8", optional = true }
+toml_edit = { version = "0.22", optional = true }
 
 [patch.crates-io]
